improved debug dump, added more tests